--- a/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/news.html
+++ b/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/news.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,50 +8,78 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="navBar--news">
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
-        <div class="navBar--news_item"></div>
+        <div class="navBar--news_item"><h2>NEWS</h2></div>
+        <div class="navBar--news_item"><h4>home</h4></div>
+        <div class="navBar--news_item"><h4>coronavirus</h4></div>
+        <div class="navBar--news_item"><h4>climate</h4></div>
+        <div class="navBar--news_item"><h4>Video</h4></div>
+        <div class="navBar--news_item"><h4>world</h4></div>
+        <div class="navBar--news_item"><h4>UK</h4></div>
+        <div class="navBar--news_item"><h4>business</h4></div>
+        <div class="navBar--news_item"><h4>Tech</h4></div>
+        <div class="navBar--news_item"><h4>Science</h4></div>
+        <div class="navBar--news_item"><h4>Stories</h4></div>
+        <div class="navBar--news_item"><h4>E&A</h4></div>
+        <div class="navBar--news_item"><h4>Health</h4></div>
+        <div class="navBar--news_item"><h4>In Picture</h4></div>
+        <div class="navBar--news_item"><h4>TV</h4></div>
     </div>
 
     <div class="ad--row">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/28346001_1?$dw_pm1$&wid=400&hei=400" alt=""></div>
+        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/20790122_2?$dw_pm1$&wid=400&hei=400" alt=""></div>
+        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/28347001_1?$dw_pm1$&wid=400&hei=400" alt=""></div>
+        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/28347001_1?$dw_pm1$&wid=400&hei=400" alt=""></div>
+        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/28338001_2?$dw_pm1$&wid=400&hei=400" alt=""></div>
     </div>
 
     <div class="new--main">
         <div class="pic">
-        <h2>boorder shut as new corona variant says hello</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo molestias natus repellendus, voluptatibus quos saepe?</p>
+            <h2>boorder shut as new corona variant says hello</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo molestias natus repellendus,
+                voluptatibus quos saepe?</p>
+        </div>
+        <div class="livenews">
+            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione ex illo, officiis fugit ipsum dolores
+                quae. Exercitationem ex quas, neque laborum id nisi corporis rem laboriosam nobis, ducimus minima
+                corrupti.</h3>
+            <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+            <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+            <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+        </div>
     </div>
-    <div class="livenews">
-        <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione ex illo, officiis fugit ipsum dolores quae. Exercitationem ex quas, neque laborum id nisi corporis rem laboriosam nobis, ducimus minima corrupti.</h3>
-         <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
-         <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
-         <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
-    </div>
-    </div>
-    
+
     <div class="news--small">
-       <p> <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4></p>
-       <p> <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4></p>
-       <p> <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4></p>
+
+        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+
+
+        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+
+
+        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+    </div>
+
+    <div class="news--medium">
+        <div class="news--medium_article"></div>
+        <div class="news--medium_article"></div>
+        <div class="news--medium_article"></div>
+        <div class="news--medium_article"></div>
+    </div>
+
+    <div class="news--feed">
+        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
+        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
     </div>
 </body>
+
 </html>
