--- a/01-HTML-CSS/06-BEM model/michael,marina,rasheed/index.html
+++ b/01-HTML-CSS/06-BEM model/michael,marina,rasheed/index.html
@@ -5,16 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BBC-HOME</title>
 </head>
 <body>
-    <header>
-        <div class="header-text"> choose countrey</div>
-        <div class="chooser-countrey">
-            <button>countinue</button>
-        </div>
+    <nav>
         
-    </header>
+        <div class="navbar">
+
+            <div class="bbclogo">
+
+                <img src="" alt="">
+
+            </div>
+
+            <li><a href="home.html">Home</a></li> 
+            <li><a href="news.html">News</a></li> 
+            <li><a href="sport.html">Sport</a></li>
+
+            <div class="search_box">
+
+                <input class="search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
+
+                <a class="Search-btn" href="">
+
+                    <i class="fas fa-search"></i>
+
+                </a>
+
+
+            </div>
+
+        </div>
+
+    </nav>
     
 </body>
 </html>
