--- a/01-HTML-CSS/06-BEM model/michael,marina,rasheed/index.html
+++ b/01-HTML-CSS/06-BEM model/michael,marina,rasheed/index.html
@@ -14,13 +14,13 @@
 
             <div class="bbclogo">
 
-                <img src="" alt="">
+                <img src="img/bbclogo.jpeg" alt="">
 
             </div>
 
-            <li><a href="home.html">Home</a></li> 
-            <li><a href="news.html">News</a></li> 
-            <li><a href="sport.html">Sport</a></li>
+            <div class="navbox"><a href="home.html">Home</a></div>
+            <div class="navbox"><a href="news.html">News</a></div> 
+            <div class="navbox"><a href="sport.html">Sport</a></div>
 
             <div class="search_box">
 
