--- a/01-HTML-CSS/06-BEM model/michael,marina,rasheed/home.html
+++ b/01-HTML-CSS/06-BEM model/michael,marina,rasheed/home.html
@@ -22,7 +22,9 @@
 
             <div class="logo">
 
+                <a href="home.html">
                 <img src="img/bbclogo.jpeg" alt="" class="bbclogo">
+                </a>
                 
             </div>
 
@@ -39,7 +41,7 @@
 
             </div>
 
-            <div class="search_box">
+            <div class="searchbox">
 
                 <input id="orb-search-q" type="text" maxlength="100" name="q" placeholder="Search">
 
