--- a/01-HTML-CSS/06-BEM model/T,Y,R/Roi.html
+++ b/01-HTML-CSS/06-BEM model/T,Y,R/Roi.html
@@ -8,10 +8,25 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
-    <link rel="stylesheet" href="style_Roi.css">
+    <link rel="stylesheet" href="dist/style_Roi.css">
     <title>BBC &nbsp;|&nbsp; Home </title>
 </head>
 <body>
-    
+    <div class="Nav">
+        <img src="logo/bbc-Logo.png">
+        <div class="Nav__BTN"><a href="home.html">home</a></div>
+        <div class="Nav__BTN"><a href="news.html">news</a></div>
+        <div class="Nav__BTN"><a href="sport.html">sport</a></div>
+        <div class="Nav__BTN"><a href="#">reel</a></div>
+        <div class="Nav__BTN"><a href="#">worklife</a></div>
+        <div class="Nav__BTN"><a href="#">travel</a></div>
+        <div class="Nav__BTN"><a href="#">future</a></div>
+        <div class="Nav__BTN"><a href="#">culture</a></div>
+        <div class="Nav__BTN"><a href="#">more</a></div>
+     </div>
+    </div>
+    <div class="STRIPE">
+        <div class="STRIPE__title"><b>SPORTS</b></div>
+    </div>
 </body>
 </html>
