--- a/01-HTML-CSS/06-BEM model/michael,marina,rasheed/home.html
+++ b/01-HTML-CSS/06-BEM model/michael,marina,rasheed/home.html
@@ -10,7 +10,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBC-HOME</title>
+    <link rel="icon" href="img/favicon.ico" sizes="any">
+    <title>BBC - Homepage </title>
 
 </head>
 
@@ -122,6 +123,28 @@
             </div>
     
     
+        </div>
+
+        <!-- ***** MIDDLE BAR ***** -->
+
+        <div class= "middlebar">
+
+            <h1> News </h1>
+
+
+
+        </div>
+        <!-- ***** HOME BODY 2 ***** -->
+
+        <div class= "homebody2">
+
+
+
+
+
+
+
+
         </div>
 
 
