--- a/01-HTML-CSS/06-BEM model/michael,marina,rasheed/home.html
+++ b/01-HTML-CSS/06-BEM model/michael,marina,rasheed/home.html
@@ -134,16 +134,44 @@
 
 
         </div>
-        <!-- ***** HOME BODY 2 ***** -->
+        <!-- ***** HOME NEWS ***** -->
 
-        <div class= "homebody2">
+        <div class= "homenews">
+
+            <div class="newsbox">
+
+                <img class= "newsboximg" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/A496/production/_121843124_41d63339-76f7-4808-ab8e-4fdbd1ed2de0.jpg" alt="">
+
+                <div class="newsboxtext">
+                <h1 class="title2"> Musical theatre icon Stephen Sondheimn <br> dies at 91</h1>
+                <p class="desc2"> The US composer and lyricist reshaped America's <br> musical theatre in a career spanning over 60 years. </p>
+                <p class="category"> ENTERTAINMENT & ARTS </p>
+                </div>
+
+            </div>
+
+            <div class="newsbox">
+
+                <div class="newsboxtext">
+                <img class="newsboximg" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/11CFF/production/_121795927_swiss.jpg" alt="">
+                <h1 class="title2"> Does India really have more women then <br> men?</h1>
+                <p class="desc2"> An Indian government survey says so - but the numbers don't add up.</p>
+                <p class="category"> INDIA </p>
+                 </div>
+
+            </div>
 
 
+            <div class="newsbox">
 
+                <div class='newsboxtext'>
+                <img class="newsboximg" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/1434A/production/_121826728_gettyimages-1236489341-594x594.jpg" alt="">
+                <h1 class="title2"> Ukraine leader alleges coup plan involving Russians </h1>
+                <p class="desc2"> He says an alleged plan to overthrow his government comes amid threats of a Russian invasion </p>
+                <p class="category"> EUROPE </p>
+                </div>
 
-
-
-
+            </div>
 
         </div>
 
