--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
@@ -25,7 +25,7 @@
      <button style="position: relative; bottom: 58px; left:94%;"class="NavBar__search" title="חיפוש"><i class="fa fa-search"></i></button>
      <div style="background-color: rgb(194, 212, 26); font-family: Arial, Helvetica, sans-serif; color: white; padding: 10px;"> 
         <h1>SPORT</h1>
-    <div class="sport_Header">
+    <div class="NavBar--sports_Header">
        <a href="#">| Home</a>
        <a href="#">| Football</a>
        <a href="#">| Cricket</a>
