--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
@@ -38,5 +38,117 @@
       
     </div>
    </div>
+   <div class="main">
+    <div class="main__upper">
+   <div class="main__upper__img--big--sports">
+       <img src="https://static01.nyt.com/images/2019/11/26/travel/26trending-apps01/26trending-apps01-videoSixteenByNineJumbo1600.jpg" alt="8 Ski Apps, Ready for Winter - The New York Times" jsname="HiaYvf" jsaction="load:XAeZkd;" class="n3VNCb" data-noaft="1" style="width: 50vw; height:50vh; margin: 8.26875px 0px;">
+       <h2>
+           Lorem ipsum dolor sit amet.
+       </h2>
+       <h3>
+           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore at consequuntur ad ratione similique voluptatem? Eaque!
+       </h3>
+       <p>
+           Travel
+       </p>
+   </div>
+
+   <div class="main__upper__box">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mavericks_Surf_Contest_2010b.jpg" alt="Surfing - Wikipedia" jsname="HiaYvf" jsaction="load:XAeZkd;" class="n3VNCb" data-noaft="1" style="width: 233px; height: 186.64px; margin: 8.26875px 0px;">
+       <h2>
+           Lorem ipsum dolor sit amet.
+       </h2>
+       <h3>
+           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore at consequuntur ad ratione similique voluptatem? Eaque!
+       </h3>
+       <p>
+           Travel
+       </p>
+   </div>
+
+</div>
+<div class="main__down">
+   <div class="main__down__box">
+       <img  src="https://static01.nyt.com/images/2020/08/24/sports/24mlb-kepner-1/merlin_176084667_69b1099b-0b7e-41ce-bfdf-e407899f10dc-articleLarge.jpg?quality=75&auto=webp&disable=upscale">
+       <h2>
+           Lorem ipsum dolor sit amet consectetur.
+       </h2>
+       <h3>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
+           facilis.
+       </h3>
+       <p>
+           US & Canada
+       </p>
+   </div>
+   <div class="main__down__box">
+       <img  src="https://static.timesofisrael.com/www/uploads/2021/08/AP21219370302658.jpg">
+       <h2>
+           Lorem ipsum dolor sit amet consectetur.
+       </h2>
+       <h3>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
+           facilis.
+       </h3>
+       <p>
+           US & Canada
+       </p>
+   </div>
+   <div class="main__down__box">
+       <img  src="https://c.files.bbci.co.uk/4646/production/_118109971_livreal.jpg">
+       <h2>
+           Lorem ipsum dolor sit amet consectetur.
+       </h2>
+       <h3>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
+           facilis.
+       </h3>
+       <p>
+           US & Canada
+       </p>
+   </div>
+   <div class="main__down__box">
+       <img  src="https://i.guim.co.uk/img/media/1e8eddb01346e53487ed86ba1ccfe853ef215477/0_733_4692_2815/master/4692.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=4e7e6f632cd441c457c4d91a5205bb17">
+       <h2>
+           Lorem ipsum dolor sit amet consectetur.
+       </h2>
+       <h3>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
+           facilis.
+       </h3>
+       <p>
+           US & Canada
+       </p>
+   </div>
+   <div class="main__down__box">
+       <img  src="https://i.natgeofe.com/n/3a0ef031-ec69-4559-9e41-2a5f70350c96/01-race-horse-deaths-gettyimages-686492928_4x3.jpg">
+       <h2>
+           Lorem ipsum dolor sit amet consectetur.
+       </h2>
+       <h3>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
+           facilis.
+       </h3>
+       <p>
+           US & Canada
+       </p>
+   </div>
+   <div class="main__down__box">
+       <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/climbing-training-royalty-free-image-828532530-1559595807.jpg?crop=0.670xw:1.00xh;0.254xw,0&resize=480:*">
+       <h2>
+           Lorem ipsum dolor sit amet consectetur.
+       </h2>
+       <h3>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
+           facilis.
+       </h3>
+       <p>
+           US & Canada
+       </p>
+   </div>
+</div>
+</div>
+</body>
+</html>
 </body>
 </html>
