--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
@@ -39,10 +39,10 @@
     </div>
    </div>
    <div class="main">
-    <div class="main__upper">
+    <div class="main__upper--grid">
    <div class="main__upper__img--big--sports">
        
-       <img src="https://static01.nyt.com/images/2019/11/26/travel/26trending-apps01/26trending-apps01-videoSixteenByNineJumbo1600.jpg" alt="8 Ski Apps, Ready for Winter - The New York Times" jsname="HiaYvf" jsaction="load:XAeZkd;" class="n3VNCb" data-noaft="1" style="width: 50vw; height:50vh; margin: 8.26875px 0px;">
+       <img src="https://static01.nyt.com/images/2019/11/26/travel/26trending-apps01/26trending-apps01-videoSixteenByNineJumbo1600.jpg" alt="8 Ski Apps, Ready for Winter - The New York Times" style="width: 50vw; height:50vh; ">
        <h2>
            Lorem ipsum dolor sit amet.
        </h2>
@@ -55,7 +55,7 @@
    </div>
 
    <div class="main__upper__box">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mavericks_Surf_Contest_2010b.jpg" alt="Surfing - Wikipedia" jsname="HiaYvf" jsaction="load:XAeZkd;" class="n3VNCb" data-noaft="1" style="width: 233px; height: 186.64px; margin: 8.26875px 0px;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mavericks_Surf_Contest_2010b.jpg" alt="Surfing - Wikipedia" style="width: 233px; height: 186.64px;">
        <h2>
            Lorem ipsum dolor sit amet.
        </h2>
