--- a/01-HTML-CSS/06-BEM model/T,Y,R/tamir.html
+++ b/01-HTML-CSS/06-BEM model/T,Y,R/tamir.html
@@ -8,7 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="maincontent">
+    <div class="mainpic">
+        <img src="news/OIP (2).jpg" alt="">
+    </div>
+    <div class="maintext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum autem consequuntur voluptatibus exercitationem non, quas laudantium pariatur quasi sint, iste architecto rem hic, aliquid at ad dolore itaque blanditiis saepe.
+           <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odit illo facilis cumque? Ab veritatis unde dolor, dolore libero, optio quae beatae quia commodi, nobis deserunt at accusantium nihil porro. </P>
+           </div> 
     
-    
+    <div claas="subpic">
+        <img src="news/MG_5403-1024x683.jpg" alt="">
+    </div>
+    </div>
 </body>
 </html>
