--- a/01-HTML-CSS/06-BEM model/MMR-UNITED/home.html
+++ b/01-HTML-CSS/06-BEM model/MMR-UNITED/home.html
@@ -18,7 +18,7 @@
 <body>
 
         
-        <!-- ***** HOME BODY ***** -->
+        <!-- ***** MICHAEL HOME BODY ***** -->
 
         <div class="topbar">
 
