--- a/01-HTML-CSS/06-BEM model/T,Y,R/tamir.html
+++ b/01-HTML-CSS/06-BEM model/T,Y,R/tamir.html
@@ -5,19 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/style.css">
-    <title>Document</title>
+    <title>news</title>
 </head>
 <body>
     <div class="maincontent">
-    <div class="mainpic">
+    <div class="mainpic">1
         <img src="news/OIP (2).jpg" alt="">
     </div>
-    <div class="maintext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum autem consequuntur voluptatibus exercitationem non, quas laudantium pariatur quasi sint, iste architecto rem hic, aliquid at ad dolore itaque blanditiis saepe.
-           <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odit illo facilis cumque? Ab veritatis unde dolor, dolore libero, optio quae beatae quia commodi, nobis deserunt at accusantium nihil porro. </P>
-           </div> 
-    
-    <div claas="subpic">
-        <img src="news/MG_5403-1024x683.jpg" alt="">
+    <div class="maintext">2
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione sunt corporis praesentium, culpa quibusdam aut soluta cumque velit labore rem doloribus porro repellat quisquam voluptatum voluptatibus dolor saepe accusamus deserunt!</p>
+    </div> 
+    <div class="subtext">3
+        <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa culpa temporibus adipisci atque voluptate sed quos fugit quo nemo quae labore ad, iste enim est eum vitae suscipit fugiat quisquam.</P>
+    </div>
+    <div claas="subpic">4
+        <img src="news/OIP (2).jpg" alt="">
+    </div>
+    <div class="pictext">5
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit laboriosam error minima iure rerum porro a exercitationem labore voluptatum eligendi qui accusantium ipsum vel possimus unde, id eius repellat! Quaerat.</p>
     </div>
     </div>
 </body>
