--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel/Home.html
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel/Home.html
@@ -13,6 +13,21 @@
 <body>
     <div class="header">
         <div class="header--logo">joe rogan</div>
+        <div class="navbar">
+            <div class="navbar--item">
+                Home
+            </div>
+            <div class="navbar--item">
+                Tour
+            </div>
+            <div class="navbar--item">
+                JRE Podcast
+            </div>
+            <div class="navbar--item">
+                Comedy specials
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
