--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel/Home.html
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel/Home.html
@@ -26,8 +26,14 @@
             <div class="navbar--item">
                 Comedy specials
             </div>
-            
         </div>
     </div>
+    <div class="socialmedia">
+<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="Instagram"></i>
+<i class="socialmedia--item"> <img src="https://cdn-icons.flaticon.com/png/512/739/premium/739237.png?token=exp=1638036254~hmac=35e1bccc500cefa09a9d22ef4b976c11" alt="facebook"></i>
+<i class="socialmedia--item"> <img src="" alt="twitter"></i>
+<i class="socialmedia--item"> <img src="" alt="youtube"></i>
+<i class="socialmedia--item"> <img src="" alt="vimeo"></i>
+</div>
 </body>
 </html>
