--- a/01-HTML-CSS/06-BEM model/T,Y,R/tamir-roi-yossi/news.html
+++ b/01-HTML-CSS/06-BEM model/T,Y,R/tamir-roi-yossi/news.html
@@ -4,26 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/style.css">
-    <title>news</title>
+    <link rel="stylesheet" href="style1.css">
+    <title>BBC &nbsp;|&nbsp; news </title>
 </head>
 <body>
     <div class="maincontent">
-    <div class="mainpic">1
-        <img src="news/OIP (2).jpg" alt="">
+    <div class="mainpic">
+        <img class="tam" src="news/OIP (2).jpg" alt="">
     </div>
-    <div class="maintext">2
+    <div class="maintext">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione sunt corporis praesentium, culpa quibusdam aut soluta cumque velit labore rem doloribus porro repellat quisquam voluptatum voluptatibus dolor saepe accusamus deserunt!</p>
     </div> 
-    <div class="subtext">3
+    <div class="subtext">
         <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa culpa temporibus adipisci atque voluptate sed quos fugit quo nemo quae labore ad, iste enim est eum vitae suscipit fugiat quisquam.</P>
     </div>
-    <div claas="subpic">4
+    <div claas="subpic">
         <img src="news/OIP (2).jpg" alt="">
     </div>
-    <div class="pictext">5
+    <div class="pictext">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit laboriosam error minima iure rerum porro a exercitationem labore voluptatum eligendi qui accusantium ipsum vel possimus unde, id eius repellat! Quaerat.</p>
     </div>
     </div>
+
+
 </body>
 </html>
