--- a/01-HTML-CSS/06-BEM model/tamir-roi-yossi/news.html
+++ b/01-HTML-CSS/06-BEM model/tamir-roi-yossi/news.html
@@ -8,6 +8,22 @@
     <title>BBC &nbsp;|&nbsp; news </title>
 </head>
 <body>
+    <div class="Nav">
+        <img src="logo/bbc-Logo.png">
+        <div class="Nav__BTN Nav__BTN--home"><a href="home.html">home</a></div>
+        <div class="Nav__BTN Nav__BTN--news"><a href="news.html">news</a></div>
+        <div class="Nav__BTN Nav__BTN--sport"><a href="sport.html">sport</a></div>
+        <div class="Nav__BTN Nav__BTN--reel"><a href="#">reel</a></div>
+        <div class="Nav__BTN Nav__BTN--worklife"><a href="#">worklife</a></div>
+        <div class="Nav__BTN Nav__BTN--travel"><a href="#">travel</a></div>
+        <div class="Nav__BTN Nav__BTN--future"><a href="#">future</a></div>
+        <div class="Nav__BTN Nav__BTN--culture"><a href="#">culture</a></div>
+        <div class="Nav__BTN Nav__BTN--more"><a href="#">more</a></div>
+    </div>
+    
+    <div class="stripe">
+        <div class="stripe stripe--home"><b>HOME</b></div>
+    </div>
     <div class="maincontent">
     <div class="mainpic">
         <img class="tam" src="news/OIP (2).jpg" alt="">
@@ -25,7 +41,65 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit laboriosam error minima iure rerum porro a exercitationem labore voluptatum eligendi qui accusantium ipsum vel possimus unde, id eius repellat! Quaerat.</p>
     </div>
     </div>
+    <div class="sub-content">
 
+        <div class="sub-content__box">side empy space</div> <!-- side empy space -->
+
+        <div class="sub-content__box">
+            <a class="sub-content__link" href="">
+                <img class="sub-content__img" src="images/manchester.jpg" alt="">
+                <p class="sub-content__main-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                    expedita, est quidem minus et quo eligendi molestiae possimus obcaecati culpa.</p>
+            </a>
+            <p class="sub-content__sub-text">
+                <a class="sub-content__link" href="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id
+                    voluptates cupiditate pariatur rerum error
+                    et impedit enim ratione officiis corrupti.</a>
+            </p>
+        </div>
+
+        <div class="sub-content__box">
+            <a class="sub-content__link" href="">
+                <img class="sub-content__img" src="images/lebron.jpg" alt="">
+                <p class="sub-content__main-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                    expedita, est quidem minus et quo eligendi molestiae possimus obcaecati culpa.</p>
+            </a>
+            <p class="sub-content__sub-text">
+                <a class="sub-content__link" href="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id
+                    voluptates cupiditate pariatur rerum error
+                    et impedit enim ratione officiis corrupti.</a>
+            </p>
+        </div>
+
+        <div class="sub-content__box">
+            <a class="sub-content__link" href="">
+                <img class="sub-content__img" src="images/barcelona.jpg" alt="">
+                <p class="sub-content__main-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                    expedita, est quidem minus et quo eligendi molestiae possimus obcaecati culpa.</p>
+            </a>
+            <p class="sub-content__sub-text">
+                <a class="sub-content__link" href="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id
+                    voluptates cupiditate pariatur rerum error
+                    et impedit enim ratione officiis corrupti.</a>
+            </p>
+        </div>
+
+        <div class="sub-content__box">
+            <a class="sub-content__link" href="">
+                <img class="sub-content__img" src="images/wta.jpg" alt="">
+                <p class="sub-content__main-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                    expedita, est quidem minus et quo eligendi molestiae possimus obcaecati culpa.</p>
+            </a>
+            <p class="sub-content__sub-text">
+                <a class="sub-content__link" href="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id
+                    voluptates cupiditate pariatur rerum error
+                    et impedit enim ratione officiis corrupti.</a>
+            </p>
+        </div>
+
+        <div class="sub-content__box">side empy space</div>
+
+    </div>
 
 </body>
 </html>
