--- a/01-HTML-CSS/06-BEM model/GRID-ORIGINAL/news.html
+++ b/01-HTML-CSS/06-BEM model/GRID-ORIGINAL/news.html
@@ -66,12 +66,12 @@
 
 
             <div class="grid-2">
-                <img src="2021-11-23 19.25.04.png">
+                <img src="imge/2021-11-23 19.25.04.png">
             </div>
 
 
             <div class="grid-3">
-                <img src="Screenshot 2021-11-23 19.21.53.png">
+                <img src="imge/Screenshot 2021-11-23 19.21.53.png">
                 <h1 class="title"><a href="">Afghanistan: 100 days of Taliban rule</h1></a>
                 <p>It's been 100 days since the Taliban returned to power in Afghanistan.
                     BBC reporter Yalda Hakim visited a district of Kabul to report on four key areas of concern facing
@@ -81,7 +81,7 @@
 
 
             <div class="grid-4">
-                <img src="_120727353__112965584_gettyimages-976188246-1.jpg">
+                <img src="imge/_120727353__112965584_gettyimages-976188246-1.jpg">
                 <h1 class="title"><a href="">US to release oil reserves in attempt to lower prices</a></h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque maxime consequatur voluptatem
                     doloribus, nobis quo odio ibus fugiat, libero esse a distinctio! Doloremque, ex.
@@ -90,7 +90,7 @@
 
 
             <div class="grid-5">
-                <img src="_121764911_hi072140295-1.jpg">
+                <img src="imge/_121764911_hi072140295-1.jpg">
                 <h1 class="title"><a href="">Peng Shuai: China says tennis star case maliciously hyped up</a></h1>
                 <p>China has said the controversy surrounding tennis star Peng Shuai has been "maliciously hyped up", in
                     its most direct response to the issue yet.
@@ -101,7 +101,7 @@
 
 
             <div class="grid-6">
-                <img src="_121613371_womanshopping.jpg">
+                <img src="imge/_121613371_womanshopping.jpg">
                 <h1 class="title"><a href="">Can UK avoid a Europe-style return to lockdown?</a></h1>
                 <p>Covid infection rates have started rising sharply in parts of Western Europe, prompting the
                     introduction of fresh restrictions and lockdowns.
@@ -113,7 +113,7 @@
 
 
             <div class="grid-7">
-                <img src="_115810648_004705345.jpg">
+                <img src="imge/_115810648_004705345.jpg">
                 <h1 class="title"><a href="">Meredith Kercher: Student's killer Rudy Guede ends sentence</a></h1>
                 <p>Rudy Guede, convicted of the 2007 murder of UK exchange student Meredith Kercher, has finished his
                     sentence early saying he wants to be forgotten.
