--- a/01-HTML-CSS/06-BEM model/tamir-roi-yossi/sport.html
+++ b/01-HTML-CSS/06-BEM model/tamir-roi-yossi/sport.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="Nav">
-        <img src="logo/bbc-Logo.png">
+        <img src="logo/bbc-Logo.png" class="logo" onclick="window.location.href='home.html'">
         <div class="Nav__BTN Nav__BTN--home"><a href="home.html">home</a></div>
         <div class="Nav__BTN Nav__BTN--news"><a href="news.html">news</a></div>
         <div class="Nav__BTN Nav__BTN--sport"><a href="sport.html">sport</a></div>
