--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/news.html
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/news.html
@@ -19,7 +19,7 @@
             <div class="nav signIn"><a href='signin.html'>Sign In</a></div>
             <div class="nav home"><a href='home.html'>Home</a></div>
             <div class="nav news"><a href='news.html'>News</a></div>
-            <div class="nav sport"><a href='sport.html'>Sport</a></div>
+            <div class="nav sport"><a href='SPORT.HTML'>Sport</a></div>
             <div class="nav reel"><a href='sport.html'>Reel</a></div>
 
             <div class="search">
