--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/home.html
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/home.html
@@ -74,6 +74,8 @@
         
         <!-- ***** HOME BODY ***** -->
 
+    <div class="homebody">
+
         <div class="topbar">
 
             <h1 class="welcome"> Welcome to BBC.com</h1>
@@ -209,6 +211,8 @@
             </div>
 
         </div>
+
+    </div>
 
 
     
