--- a/01-HTML-CSS/06-BEM model/amazon/home.html
+++ b/01-HTML-CSS/06-BEM model/amazon/home.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
+
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/76fdd0e120.js" crossorigin="anonymous"></script>
 
@@ -16,10 +21,11 @@
 
 <body>
 
-    <div class="header">
-        sshshshshshshshshhsshhs
-        <div class="header__logo">jdjdjdjd</div>
-        <div class="header__item1">kdkskdksksk</div>
+    <div class="upperHeader">
+        <div class="upperHeader__logo"><img src="img/upperHeader.jpg" alt=""></div>
+        <div class="upperHeader__searchBar"><input type="search" value="search"></div>
+        <div class="upperHeader__flag"><i class="fas fa-flag-usa"></i></div>
+        <div class="upperHeader__cart"><i class="fas fa-cart-plus"></i></div>
 
 
         <div class="mainButton">
@@ -32,6 +38,13 @@
 
 
 
+    </div>
+
+    <div class="lowerHeader">
+      <div  class="lowerHeader__item"><a href="/Home/">Home</a></div> 
+      <div  class="lowerHeader__item"><a href="/Deal/">Deal</a></div> 
+        <div  class="lowerHeader__item"><a href="/Service/">Service</a></div> 
+            <div  class="lowerHeader__item"><a href="/Registry/">Registry</a></div> 
     </div>
 
     <div class="carousel">
