--- a/01-HTML-CSS/06-BEM model/amazon/home.html
+++ b/01-HTML-CSS/06-BEM model/amazon/home.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/76fdd0e120.js" crossorigin="anonymous"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="dist/style.css">
+    <link rel="stylesheet" href="dist/amazon.css">
     <title>Document</title>
 </head>
 
@@ -41,10 +41,10 @@
     </div>
 
     <div class="lowerHeader">
-      <div  class="lowerHeader__item"><a href="/Home/">Home</a></div> 
-      <div  class="lowerHeader__item"><a href="/Deal/">Deal</a></div> 
-        <div  class="lowerHeader__item"><a href="/Service/">Service</a></div> 
-            <div  class="lowerHeader__item"><a href="/Registry/">Registry</a></div> 
+      <div  class="lowerHeader__item"><a href="home.html">Home</a></div> 
+      <div  class="lowerHeader__item"><a href="Deal.html">Deal</a></div> 
+        <div  class="lowerHeader__item"><a href="Service.html">Service</a></div> 
+            <div  class="lowerHeader__item"><a href="Registry.html">Registry</a></div> 
     </div>
 
     <div class="carousel">
