--- a/01-HTML-CSS/06-BEM model/amazon/Deal.html
+++ b/01-HTML-CSS/06-BEM model/amazon/Deal.html
@@ -49,64 +49,64 @@
 
     <div class="dealGrid">
         <div class="dealGrid__runner">
-            <img src="dealrunner.jpg">
+            <img src="img/dealrunner.jpg">
         </div>
         <div class="dealGrid__dealbox--dealbox1"></div>
         <div class="dealGrid__dealbox">
-        <img src="dealbox2.jpg">
+        <img src="img/dealbox2.jpg">
         <p>Blink Outdoor - wireless, weather-resistant HD...</p>
         <h4>$59.99</h4>
         </div>
         <div class="dealGrid__dealbox">
-            <img src="dealbox3.jpg">
+            <img src="img/dealbox3.jpg">
             <p>Blink Outdoor 5 Cam Kit bundle with Echo Show 5</p>
             <h3 >Currently Unavailabe</h3>
         </div>
         <div class="dealGrid__dealbox">
-            <img src="dealbox4.jpg">
+            <img src="img/dealbox4.jpg">
             <p>Shure MV7X XLR Podcast Microphone-Pro Quality...</p>
             <h4>$149.00</h4>
         </div>
         <div class="dealGrid__dealbox">
-            <img src="dealbox5.jpg"> 
+            <img src="img/dealbox5.jpg"> 
             <p>eufy Security Solo IndoorCam P24, 2K Pan..</p>
             <h4>$39.99</h4>
         </div>
         <div class="dealGrid__dealbox">
-            <img src="dealbox6.jpg">
+            <img src="img/dealbox6.jpg">
             <p>Elgato Wave:3 Premium USB Condenser...</p>
             <h4>$119.99</h4>
         </div>
         <div class="dealGrid__dealbox">
-            <img src="dealbox7.jpg"> 
+            <img src="img/dealbox7.jpg"> 
             <p>Echo Dot (4th Gen) | Our most popular smart speaker with Alexa |...</p>
             <h4>$26.99</h4>
 
         </div>
         <div class="dealGrid__dealbox">
-            <img src="dealbox8.jpg">
+            <img src="img/dealbox8.jpg">
             <p>Lexar PLAY 512GB microSDXC UHS-I-Card,...</p>
             <h4>$59.99</h4>
 
         </div>
         <div class="dealGrid__dealbox">
-            <img src="dealbox9.jpg">
+            <img src="img/dealbox9.jpg">
             <p>SAMSUNG Odyssey G7 Series 27-Inch WQHD...</p>
             <h4>$499.99</h4>
 
         </div>
         <div class="dealGrid__dealbox">
-            <img src="dealbox10.jpg">
+            <img src="img/dealbox10.jpg">
             <p>Bose Sleepbuds II - Sleep Technology Clinically...</p>
             <h4>$199.99</h4>
         </div>
         <div class="dealGrid__dealbox">
-            <img src="dealbox11.jpg">
+            <img src="img/dealbox11.jpg">
             <p>Powerbeats Pro Wireless Earbuds - Apple H1...</p>
             <h4>$149.95</h4>
         </div>
         <div class="dealGrid__dealbox">
-            <img src="dealbox12.jpg">
+            <img src="img/dealbox12.jpg">
             <p>Anker Soundcore Liberty Air 2 Pro True Wireless Earbuds,...</p>
             <h4>$150.00</h4>
         </div>
