--- a/01-HTML-CSS/06-BEM model/amazon/home.html
+++ b/01-HTML-CSS/06-BEM model/amazon/home.html
@@ -47,14 +47,25 @@
             <div  class="lowerHeader__item"><a href="Registry.html">Registry</a></div> 
     </div>
 
-    <div class="carousel">
 
-        <div class="carousel__buttonItem"><i class="fas fa-2x fa-chevron-left"></i></div>
-        <img src="carousel.jpg" alt="">
-        <div class="carousel__buttonItem"><i class="fas fa-2x fa-chevron-right"></i></div>
+    <div class="box">
 
-
+        <div class="box__boxItem--boxItem1">
+            <div class="arrowLeft"><i class="fas fa-2x fa-chevron-left"></i></div>
+            <img src="img/carousel.jpg" alt="">
+            <div class="arrowRight"><i class="fas fa-2x fa-chevron-right"></i></div>
+        </div>
+        <div class="box__boxItem">Electronics<img src="img/1.1.jpg" alt=""><span>See More</span></div>
+        <div class="box__boxItem">Shipping<img src="img/1.2.jpg" alt=""><span>See More</span></div>
+        <div class="box__boxItem">Gifts<img src="img/1.3.jpg" alt=""><span>See More</span></div>
+        <div class="box__boxItem">Products<img src="img/1.4.jpg" alt=""><span>See More</span></div>
+        <div class="box__boxItem">Deals<img src="img/2.1.JPG" alt=""><span>See More</span></div>
+        <div class="box__boxItem">TV<img src="img/2.2.JPG" alt=""><span>See More</span></div>
+        <div class="box__boxItem">Deal<img src="img/2.3.JPG" alt=""><span>See More</span></div>
+        <div class="box__boxItem">Deal<img src="img/2.4.JPG" alt=""><span>See More</span></div>
     </div>
+
+
 
 
 </body>
