--- a/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/news.html
+++ b/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/news.html
@@ -11,33 +11,76 @@
 
 <body>
     <div class="navBar--news">
-        <div class="navBar--news_item"><h2>NEWS</h2></div>
-        <div class="navBar--news_item"><h4>home</h4></div>
-        <div class="navBar--news_item"><h4>coronavirus</h4></div>
-        <div class="navBar--news_item"><h4>climate</h4></div>
-        <div class="navBar--news_item"><h4>Video</h4></div>
-        <div class="navBar--news_item"><h4>world</h4></div>
-        <div class="navBar--news_item"><h4>UK</h4></div>
-        <div class="navBar--news_item"><h4>business</h4></div>
-        <div class="navBar--news_item"><h4>Tech</h4></div>
-        <div class="navBar--news_item"><h4>Science</h4></div>
-        <div class="navBar--news_item"><h4>Stories</h4></div>
-        <div class="navBar--news_item"><h4>E&A</h4></div>
-        <div class="navBar--news_item"><h4>Health</h4></div>
-        <div class="navBar--news_item"><h4>In Picture</h4></div>
-        <div class="navBar--news_item"><h4>TV</h4></div>
+
+        <div class="title">
+            <div class="navBar--news_item">
+                <h2>NEWS</h2>
+            </div>
+        </div>
+        <div class="nottitle">
+            <div class="navBar--news_item">
+                <h4>home</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>coronavirus</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>climate</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>Video</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>world</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>UK</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>business</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>Tech</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>Science</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>Stories</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>E&A</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>Health</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4>In Picture</h4>
+            </div>
+            <div class="navBar--news_item">
+                <h4> TV </h4>
+            </div>
+        </div>
     </div>
 
-    <div class="ad--row">
-        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/28346001_1?$dw_pm1$&wid=400&hei=400" alt=""></div>
-        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/20790122_2?$dw_pm1$&wid=400&hei=400" alt=""></div>
-        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/28347001_1?$dw_pm1$&wid=400&hei=400" alt=""></div>
-        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/28347001_1?$dw_pm1$&wid=400&hei=400" alt=""></div>
-        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/28338001_2?$dw_pm1$&wid=400&hei=400" alt=""></div>
+    <div class="ad--row2">
+        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/28346001_1?$dw_pm1$&wid=400&hei=400"
+                alt="">
+            <p>22$</p></div>
+        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/20790122_2?$dw_pm1$&wid=400&hei=400"
+                alt="">
+            <p>12$</p></div>
+        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/28347001_1?$dw_pm1$&wid=400&hei=400"
+                alt="">
+            <p>14$</p></div>
+        <div class="box"><img src="https://s7d2.scene7.com/is/image/FoxRacing/28338001_2?$dw_pm1$&wid=400&hei=400"
+                alt="">
+            <p>18$</p></div>
     </div>
 
-    <div class="new--main">
+    <div class="news--main">
         <div class="pic">
+            <img src="https://www.who.int/images/default-source/health-topics/health-financing/novelcoronavirus-optimized.jpg?sfvrsn=755458c4_12" alt="">
             <h2>boorder shut as new corona variant says hello</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo molestias natus repellendus,
                 voluptatibus quos saepe?</p>
@@ -58,7 +101,6 @@
 
 
         <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
-
 
         <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
     </div>
