--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/Tour.html
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/Tour.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="header--logo">joe rogan</div>
+        <a href="Home.html"><div class="header--logo">joe rogan</div></a>
         <div class="navbar">
             
             <div class="navbar--item">
@@ -41,11 +41,11 @@
         </div>
     </div>
     <div class="socialmedia">
-<i class="socialmedia--item"> <img src="https://cdn-icons.flaticon.com/png/512/739/premium/739237.png?token=exp=1638036254~hmac=35e1bccc500cefa09a9d22ef4b976c11" alt="facebook"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="Instagram"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/466/466963.png" alt="twitter"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons.flaticon.com/png/512/717/premium/717426.png?token=exp=1638043726~hmac=6a663266515c0f9aefd4614bc8ea5a64" alt="youtube"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/733/733637.png" alt="vimeo"></i>
+        <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/747/747374.png" alt="facebook"></i>
+        <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="Instagram"></i>
+        <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/466/466963.png" alt="twitter"></i>
+        <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/37/37922.png" alt="youtube"></i>
+        <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/733/733637.png" alt="vimeo"></i>
 </div>
 </body>
 </html>
