--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/JRE Podcast.html
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/JRE Podcast.html
@@ -8,11 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <link href="https://www.dafontfree.net/embed/dHlwZWthLXJlZ3VsYXImZGF0YS81MC90LzI3MTQxL1R5cGVrYS5vdGY" rel="stylesheet" type="text/css"/>
     <title>JRE Podcast</title>
 </head>
 <body>
     <div class="header">
-        <div class="header--logo">joe rogan</div>
+        <a href="Home.html"><div class="header--logo">joe rogan</div></a>
         <div class="navbar">
             
             <div class="navbar--item">
@@ -41,11 +42,11 @@
         </div>
     </div>
     <div class="socialmedia">
-<i class="socialmedia--item"> <img src="https://cdn-icons.flaticon.com/png/512/739/premium/739237.png?token=exp=1638036254~hmac=35e1bccc500cefa09a9d22ef4b976c11" alt="facebook"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="Instagram"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/466/466963.png" alt="twitter"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons.flaticon.com/png/512/717/premium/717426.png?token=exp=1638043726~hmac=6a663266515c0f9aefd4614bc8ea5a64" alt="youtube"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/733/733637.png" alt="vimeo"></i>
+        <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/747/747374.png" alt="facebook"></i>
+        <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="Instagram"></i>
+        <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/466/466963.png" alt="twitter"></i>
+        <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/37/37922.png" alt="youtube"></i>
+        <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/733/733637.png" alt="vimeo"></i>
 </div>
 </body>
 </html>
