--- a/01-HTML-CSS/06-BEM model/amazon/Deal.html
+++ b/01-HTML-CSS/06-BEM model/amazon/Deal.html
@@ -22,7 +22,7 @@
 <body>
 
     <div class="upperHeader">
-        <div class="upperHeader__logo"><img src="img/upperHeader.jpg" alt=""></div>
+        <div class="upperHeader__logo"><img src="img/upperHeader.ong" alt=""></div>
         <div class="upperHeader__searchBar"><input type="search" value="search"></div>
         <div class="upperHeader__flag"><i class="fas fa-flag-usa"></i></div>
         <div class="upperHeader__cart"><i class="fas fa-cart-plus"></i></div>
@@ -41,10 +41,10 @@
     </div>
 
     <div class="lowerHeader">
-      <div  class="lowerHeader__item"><a href="/Home/">Home</a></div> 
-      <div  class="lowerHeader__item"><a href="/Deal/">Deal</a></div> 
-        <div  class="lowerHeader__item"><a href="/Service/">Service</a></div> 
-            <div  class="lowerHeader__item"><a href="/Registry/">Registry</a></div> 
+        <div class="lowerHeader__item"><a href="/Home/">Home</a></div>
+        <div class="lowerHeader__item"><a href="/Deal/">Deal</a></div>
+        <div class="lowerHeader__item"><a href="/Service/">Service</a></div>
+        <div class="lowerHeader__item"><a href="/Registry/">Registry</a></div>
     </div>
 
     <div class="dealGrid">
@@ -53,14 +53,14 @@
         </div>
         <div class="dealGrid__dealbox--dealbox1"></div>
         <div class="dealGrid__dealbox">
-        <img src="img/dealbox2.jpg">
-        <p>Blink Outdoor - wireless, weather-resistant HD...</p>
-        <h4>$59.99</h4>
+            <img src="img/dealbox2.jpg">
+            <p>Blink Outdoor - wireless, weather-resistant HD...</p>
+            <h4>$59.99</h4>
         </div>
         <div class="dealGrid__dealbox">
             <img src="img/dealbox3.jpg">
             <p>Blink Outdoor 5 Cam Kit bundle with Echo Show 5</p>
-            <h3 >Currently Unavailabe</h3>
+            <h3>Currently Unavailabe</h3>
         </div>
         <div class="dealGrid__dealbox">
             <img src="img/dealbox4.jpg">
@@ -68,7 +68,7 @@
             <h4>$149.00</h4>
         </div>
         <div class="dealGrid__dealbox">
-            <img src="img/dealbox5.jpg"> 
+            <img src="img/dealbox5.jpg">
             <p>eufy Security Solo IndoorCam P24, 2K Pan..</p>
             <h4>$39.99</h4>
         </div>
@@ -78,7 +78,7 @@
             <h4>$119.99</h4>
         </div>
         <div class="dealGrid__dealbox">
-            <img src="img/dealbox7.jpg"> 
+            <img src="img/dealbox7.jpg">
             <p>Echo Dot (4th Gen) | Our most popular smart speaker with Alexa |...</p>
             <h4>$26.99</h4>
 
@@ -110,7 +110,7 @@
             <p>Anker Soundcore Liberty Air 2 Pro True Wireless Earbuds,...</p>
             <h4>$150.00</h4>
         </div>
-        
+
     </div>
 
 
