--- a/01-HTML-CSS/06-BEM model/amazon/home.html
+++ b/01-HTML-CSS/06-BEM model/amazon/home.html
@@ -22,7 +22,7 @@
 <body>
 
     <div class="upperHeader">
-        <div class="upperHeader__logo"><img src="img/upperHeader.jpg" alt=""></div>
+        <div class="upperHeader__logo"><img src="img/upperHeader.png" alt=""></div>
         <div class="upperHeader__searchBar"><input type="search" value="search"></div>
         <div class="upperHeader__flag"><i class="fas fa-flag-usa"></i></div>
         <div class="upperHeader__cart"><i class="fas fa-cart-plus"></i></div>
@@ -41,10 +41,10 @@
     </div>
 
     <div class="lowerHeader">
-      <div  class="lowerHeader__item"><a href="home.html">Home</a></div> 
-      <div  class="lowerHeader__item"><a href="Deal.html">Deal</a></div> 
-        <div  class="lowerHeader__item"><a href="Service.html">Service</a></div> 
-            <div  class="lowerHeader__item"><a href="Registry.html">Registry</a></div> 
+        <div class="lowerHeader__item"><a href="home.html">Home</a></div>
+        <div class="lowerHeader__item"><a href="Deal.html">Deal</a></div>
+        <div class="lowerHeader__item"><a href="Service.html">Service</a></div>
+        <div class="lowerHeader__item"><a href="Registry.html">Registry</a></div>
     </div>
 
 
