--- a/01-HTML-CSS/06-BEM model/amazon/service.html
+++ b/01-HTML-CSS/06-BEM model/amazon/service.html
@@ -22,7 +22,7 @@
 
 <body>
     <div class="upperHeader">
-        <div class="upperHeader__logo"><img src="img/upperHeader.jpg" alt=""></div>
+        <div class="upperHeader__logo"><img src="img/upperHeader.png" alt=""></div>
         <div class="upperHeader__searchBar"><input type="search" value="search"></div>
         <div class="upperHeader__flag"><i class="fas fa-flag-usa"></i></div>
         <div class="upperHeader__cart"><i class="fas fa-cart-plus"></i></div>
