--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/index.html
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/index.html
@@ -15,6 +15,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&family=M+PLUS+Code+Latin:wght@100;300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arvo:ital@1&family=Comforter+Brush&family=M+PLUS+Code+Latin:wght@100;300&family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -34,19 +37,23 @@
     <div class=main-articles>
         <div class="bigarticle">
           <img src="img/news.jpeg" alt="">
-         
+         <p>fresh news</p>
         </div>
         <div class="article">
           <img src="img/covid.jpeg" alt="">
+          <p>new variant</p>
         </div>
         <div class="article">
         <img src="img/stock market.jpg" alt="">
+        <p>financel news</p>
         </div>
         <div class="article">
         <img src="img/york.jpeg" alt="">
+        <p>new york</p>
         </div>
         <div class="article">
          <img src="img/liver.jpg" alt="">
+         <p>liverpoll lost</p>
         </div>
     </div>
 
