--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
@@ -44,16 +44,21 @@
         </div>
         <div class="article">
             <img src="img/benfica.jpg" alt="">
-<P></P>
+            <p>FREE TO WATCH: Highlights from Liverpool's win against Southampton in the Premier League </p>
         </div>
         <div class="article">
             <img src="img/liver.jpg" alt="">
+            <p>FREE TO WATCH: Highlights from Aston Villa's win against Crystal Palace in the Premier League.</p>
         </div>
         <div class="article">
             <img src="img/sky sport.jpg" alt="">
+            <p>An injury to Joao Monteiro - a goalkeeper playing outfield - reduced Belenenses to six men</p>
         </div>
+
+
         <div class="article">
             <img src="img/xxx.jpg" alt="">
+            <p> Paul Merson questions the decison-making at Manchester United and ability of Ralf Rangnick to turn around the club's fortunes</p>
         </div>
     </div>
 
