--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/index.html
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/index.html
@@ -37,19 +37,23 @@
   <div class=main-articles>
     <div class="bigarticle">
       <img src="img/news.jpeg" alt="">
-
+     <p><span>|</span>Fresh News in israel</p>
     </div>
     <div class="article">
       <img src="img/covid.jpeg" alt="">
+      <p><span>|</span>New corona variant</p>
     </div>
     <div class="article">
       <img src="img/stock market.jpg" alt="">
+      <p><span>|</span>finanacal News</p>
     </div>
     <div class="article">
       <img src="img/york.jpeg" alt="">
+      <p><span>|</span>New york times</p>
     </div>
     <div class="article">
       <img src="img/liver.jpg" alt="">
+      <p><span>|</span>Liverpool Lost 1-0</p>
     </div>
     
 
