--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
@@ -34,6 +34,7 @@
         <div class="nav">World</div>
         <div class="nav">Entertainment</div>
         <div class="nav">Nature</div>
+
     </div>
     </div>
 
@@ -58,7 +59,8 @@
 
         <div class="article">
             <img src="img/xxx.jpg" alt="">
-            <p> Paul Merson questions the decison-making at Manchester United and ability of Ralf Rangnick to turn around the club's fortunes</p>
+            <p> Paul Merson questions the decison-making at Manchester United and ability of Ralf Rangnick to turn
+                around the club's fortunes</p>
         </div>
     </div>
 
