--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/index.html
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/index.html
@@ -27,8 +27,8 @@
   <div class="main-menu">
     <h1>News Bbc</h1>
     <div class="nav"><a href="index.html">Home</a></div>
-    <div class="nav">Sport</div>
-    <div class="nav">World</div>
+        <div class="nav"><a href="sport.html">Sport</a> </div>
+        <div class="nav"><a href="jenia.html">World</a></div>
     <div class="nav">Entertainment</div>
     <div class="nav">Nature</div>
   </div>
