--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/jenia.html
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/jenia.html
@@ -22,7 +22,7 @@
     <div class="main-menu">
         <h1>News Bbc</h1>
         <div class="nav"><a href="index.html">Home</a></div>
-        <div class="nav">Sport</div>
+        <div class="nav"><a href="sport.html">Sport</a> </div>
         <div class="nav"><a href="jenia.html">World</a></div>
         <div class="nav">Entertainment</div>
         <div class="nav">Nature</div>
@@ -31,24 +31,24 @@
     <div class=main-articles>
         <div class="bigarticle">
             <img src="https://images.wsj.net/im-442150?width=620&height=413" alt="">
-            <p>First Omicron Covid-19 Cases Detected in U.K., Italy</p>
+            <p><span>|</span>First Omicron Covid-19 Cases Detected in U.K., Italy</p>
 
         </div>
         <div class="article">
             <img src="https://images.wsj.net/im-442138?width=619&height=413" alt="">
-            <p>Macau Police Question Junket Boss Over Alleged Illegal Gambling Syndicate</p>
+            <p><span>|</span>Macau Police Question Junket Boss Over Alleged Illegal Gambling Syndicate</p>
         </div>
         <div class="article">
             <img src="https://images.wsj.net/im-441956?width=619&height=413" alt="">
-            <p>Macau Police Question Junket Boss Over Alleged Illegal Gambling Syndicate</p>
+            <p><span>|</span>Omicron Coronavirus Variant Raises Questions Among Scientists</p>
         </div>
         <div class="article">
             <img src="https://images.wsj.net/im-438277?width=300&height=200" alt="">
-            <p>Macau Police Question Junket Boss Over Alleged Illegal Gambling Syndicate</p>
+            <p><span>|</span>Former Prime Minister Convicted of Corruption Withdraws Request for Property From Malaysia</p>
         </div>
         <div class="article">
             <img src="https://images.wsj.net/im-441604?width=300&height=200" alt="">
-            <p>Macau Police Question Junket Boss Over Alleged Illegal Gambling Syndicate</p>
+            <p><span>|</span>France, Italy Sign Pact Seeking More Influence in Europe</p>
         </div>
     </div>
 
