--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
@@ -41,26 +41,26 @@
     <div class=main-articles>
         <div class="bigarticle">
             <img src="img/liverpool.jpg" alt="">
-
+            <p>Liverpool moved second </p>
         </div>
         <div class="article">
             <img src="img/benfica.jpg" alt="">
-            <p>FREE TO WATCH: Highlights from Liverpool's win against Southampton in the Premier League </p>
+            <p>Benfica's clash with Belenenses </p>
         </div>
         <div class="article">
             <img src="img/liver.jpg" alt="">
-            <p>FREE TO WATCH: Highlights from Aston Villa's win against Crystal Palace in the Premier League.</p>
+            <p>Matt Targett and John McGinn .</p>
         </div>
         <div class="article">
             <img src="img/sky sport.jpg" alt="">
-            <p>An injury to Joao Monteiro - a goalkeeper playing outfield - reduced Belenenses to six men</p>
+            <p>Paul Merson has questioned whether </p>
         </div>
 
 
         <div class="article">
             <img src="img/xxx.jpg" alt="">
-            <p> Paul Merson questions the decison-making at Manchester United and ability of Ralf Rangnick to turn
-                around the club's fortunes</p>
+            <p> Paul Merson
+            </p>
         </div>
     </div>
 
