--- a/01-HTML-CSS/06-BEM model/Yael_Haim_Ihiya/HOME.html
+++ b/01-HTML-CSS/06-BEM model/Yael_Haim_Ihiya/HOME.html
@@ -49,6 +49,25 @@
                     <li class="navbar__nav-item">
                       <a class="navbar__nav-link" href="SPORT.html">SPORT</a>
                     </li>
+                    <li class="navbar__nav-item">
+                    <a class="navbar__nav-link" href=>economy</a>
+                    </li>
+                   <li class="navbar__nav-item">
+                   <a class="navbar__nav-link" href=>covid 19</a>
+                   </li>  
+                   <li class="navbar__nav-item">
+                   <a class="navbar__nav-link" href=>global</a>
+                   </li>
+                   <li class="navbar__nav-item">
+                    <a class="navbar__nav-link" href=>u.s.a.</a>
+                   </li>
+                    <li class="navbar__nav-item">
+                        <a class="navbar__nav-link" href=>culture</a>
+                      </li>
+                      <li class="navbar__nav-item">
+                        <a class="navbar__nav-link" href=>politick</a>
+                      </li> 
+                  </li>
                   </ul>
                 
             </nav>
