--- a/01-HTML-CSS/06-BEM model/amazon/service.html
+++ b/01-HTML-CSS/06-BEM model/amazon/service.html
@@ -36,16 +36,16 @@
     </div>
     <div class="serviceGrid">
 
-        <div class="serviceGrid__title"></div>
-        <div class="serviceGrid__option"></div>
-        <div class="serviceGrid__option"></div>
-        <div class="serviceGrid__option"></div>
-        <div class="serviceGrid__option"></div>
-        <div class="serviceGrid__option"></div>
-        <div class="serviceGrid__option"></div>
-        <div class="serviceGrid__option"></div>
-        <div class="serviceGrid__option"></div>
-        <div class="serviceGrid__option"></div>
+        <div class="serviceGrid__title">we're here to help</div>
+        <div class="serviceGrid__option"><img src="img/_service/01_orders.png"></div>
+        <div class="serviceGrid__option"><img src="img/_service/02_returns.png"></div>
+        <div class="serviceGrid__option"><img src="img/_service/03_help.png"></div>
+        <div class="serviceGrid__option"><img src="img/_service/04_digital.png"></div>
+        <div class="serviceGrid__option"><img src="img/_service/05_prime.png"></div>
+        <div class="serviceGrid__option"><img src="img/_service/06_payments.png"></div>
+        <div class="serviceGrid__option"><img src="img/_service/07_account.png"></div>
+        <div class="serviceGrid__option"><img src="img/_service/08_covid.png"></div>
+        <div class="serviceGrid__option"><img src="img/_service/09_safe.png"></div>
 
     </div>
 </body>
