--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/jenia.html
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/jenia.html
@@ -20,35 +20,38 @@
 <body>
 
     <div class="main-menu">
-        <h1>News Bbc</h1>
-        <div class="nav"><a href="index.html">Home</a></div>
-        <div class="nav"><a href="sport.html">Sport</a> </div>
-        <div class="nav"><a href="jenia.html">World</a></div>
-        <div class="nav">Entertainment</div>
-        <div class="nav">Nature</div>
+        <h1 class='main-menu__headline'>News Bbc</h1>
+        <div class="main-menu__nav"><a href="index.html">Home</a></div>
+        <div class="main-menu__nav"><a href="sport.html">Sport</a> </div>
+        <div class="main-menu__nav"><a href="jenia.html">World</a></div>
+        <div class="main-menu__nav">Entertainment</div>
+        <div class="main-menu__nav">Nature</div>
+    </div>
     </div>
 
     <div class=main-articles>
-        <div class="bigarticle">
+        <div class="main-articles__bigarticle">
             <img src="https://images.wsj.net/im-442150?width=620&height=413" alt="">
-            <p><span>|</span>First Omicron Covid-19 Cases Detected in U.K., Italy</p>
+            <p class='main-articles__text'><span>|</span>First Omicron Covid-19 Cases Detected in U.K., Italy</p>
 
         </div>
-        <div class="article">
+        <div class="main-articles__article">
             <img src="https://images.wsj.net/im-442138?width=619&height=413" alt="">
-            <p><span>|</span>Macau Police Question Junket Boss Over Alleged Illegal Gambling Syndicate</p>
+            <p class='article__text'><span>|</span>Macau Police Question Junket Boss Over Alleged Illegal Gambling
+                Syndicate</p>
         </div>
-        <div class="article">
+        <div class="main-articles__article">
             <img src="https://images.wsj.net/im-441956?width=619&height=413" alt="">
-            <p><span>|</span>Omicron Coronavirus Variant Raises Questions Among Scientists</p>
+            <p class='article__text'><span>|</span>Omicron Coronavirus Variant Raises Questions Among Scientists</p>
         </div>
-        <div class="article">
+        <div class="main-articles__article">
             <img src="https://images.wsj.net/im-438277?width=300&height=200" alt="">
-            <p><span>|</span>Former Prime Minister Convicted of Corruption Withdraws Request for Property From Malaysia</p>
+            <p class='article__text'><span>|</span>Former Prime Minister Convicted of Corruption Withdraws Request for
+                Property From Malaysia</p>
         </div>
-        <div class="article">
+        <div class="main-articles__article">
             <img src="https://images.wsj.net/im-441604?width=300&height=200" alt="">
-            <p><span>|</span>France, Italy Sign Pact Seeking More Influence in Europe</p>
+            <p class='article__text'><span>|</span>France, Italy Sign Pact Seeking More Influence in Europe</p>
         </div>
     </div>
 
