--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
@@ -28,38 +28,37 @@
 
 
     <div class="main-menu">
-        <h1>News Bbc</h1>
-        <div class="nav"><a href="index.html">Home</a></div>
-        <div class="nav"><a href="sport.html">Sport</a> </div>
-        <div class="nav"><a href="jenia.html">World</a></div>
-        <div class="nav">Entertainment</div>
-        <div class="nav">Nature</div>
-
+        <h1 class='main-menu__headline'>News Bbc</h1>
+        <div class="main-menu__nav"><a href="index.html">Home</a></div>
+        <div class="main-menu__nav"><a href="sport.html">Sport</a> </div>
+        <div class="main-menu__nav"><a href="jenia.html">World</a></div>
+        <div class="main-menu__nav">Entertainment</div>
+        <div class="main-menu__nav">Nature</div>
     </div>
     </div>
 
     <div class=main-articles>
-        <div class="bigarticle">
+        <div class="main-articles__bigarticle">
             <img src="img/liverpool.jpg" alt="">
-            <p>Liverpool moved second </p>
+            <p class='main-articles__text'>Liverpool moved second </p>
         </div>
-        <div class="article">
+        <div class="main-articles__article">
             <img src="img/benfica.jpg" alt="">
-            <p>Benfica's clash with Belenenses </p>
+            <p class='article__text'>Benfica's clash with Belenenses </p>
         </div>
-        <div class="article">
+        <div class="main-articles__article">
             <img src="img/liver.jpg" alt="">
-            <p>Matt Targett and John McGinn .</p>
+            <p class='article__text'>Matt Targett and John McGinn .</p>
         </div>
-        <div class="article">
+        <div class="main-articles__article">
             <img src="img/sky sport.jpg" alt="">
-            <p>Paul Merson has questioned whether </p>
+            <p class='article__text'>Paul Merson has questioned whether </p>
         </div>
 
 
-        <div class="article">
+        <div class="main-articles__article">
             <img src="img/xxx.jpg" alt="">
-            <p> Paul Merson
+            <p class='article__text'> Paul Merson
             </p>
         </div>
     </div>
