--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
@@ -40,7 +40,6 @@
     <div class=main-articles>
         <div class="main-articles__bigarticle">
             <img src="img/liverpool.jpg" alt="">
-<<<<<<< Updated upstream
             <p class='main-articles__text'>Liverpool moved second </p>
         </div>
         <div class="main-articles__article">
@@ -53,56 +52,11 @@
         </div>
         <div class="main-articles__article">
             <img src="img/sky sport.jpg" alt="">
-            <p class='article__text'>Paul Merson has questioned whether </p>
-=======
-<<<<<<< HEAD
-            <p><span>|</span>Liverpool moved second 
-               
-        
-             </p>
-=======
-            <p class='main-articles__text'>Liverpool moved second </p>
->>>>>>> 0a34930426dae4c87f0c34d6d1394ebc7d4639f8
+            <p class='article__text'><span>|</span>Liverpool moved second</p>
         </div>
-        <div class="main-articles__article">
-            <img src="img/benfica.jpg" alt="">
-<<<<<<< HEAD
-            <p><span>|</span>Benfica's clash with Belenenses </p>
-=======
-            <p class='article__text'>Benfica's clash with Belenenses </p>
->>>>>>> 0a34930426dae4c87f0c34d6d1394ebc7d4639f8
-        </div>
-        <div class="main-articles__article">
-            <img src="img/liver.jpg" alt="">
-<<<<<<< HEAD
-            <p><span>|</span>Matt Targett and John McGinn .</p>
-=======
-            <p class='article__text'>Matt Targett and John McGinn .</p>
->>>>>>> 0a34930426dae4c87f0c34d6d1394ebc7d4639f8
-        </div>
-        <div class="main-articles__article">
-            <img src="img/sky sport.jpg" alt="">
-<<<<<<< HEAD
-            <p><span>|</span>Paul Merson has questioned whether </p>
-=======
-            <p class='article__text'>Paul Merson has questioned whether </p>
->>>>>>> 0a34930426dae4c87f0c34d6d1394ebc7d4639f8
->>>>>>> Stashed changes
-        </div>
-
-
         <div class="main-articles__article">
             <img src="img/xxx.jpg" alt="">
-<<<<<<< Updated upstream
-            <p class='article__text'> Paul Merson
-=======
-<<<<<<< HEAD
-            <p> <span>|</span>Paul Merson
-=======
-            <p class='article__text'> Paul Merson
->>>>>>> 0a34930426dae4c87f0c34d6d1394ebc7d4639f8
->>>>>>> Stashed changes
-            </p>
+            <p class='article__text'><span>|</span>Paul Merson</p>
         </div>
     </div>
 
