--- a/01-HTML-CSS/06-BEM model/Yael_Haim_Ihiya/HOME.html
+++ b/01-HTML-CSS/06-BEM model/Yael_Haim_Ihiya/HOME.html
@@ -94,12 +94,12 @@
                       </div>
                   </div>
               
-<!--/////////////////////////////////////////////////////////
+<!--/////////////////////////////////////////////////////////-->
 <div class="container">
-  <div class="grid" ><img src="pic/home/bbg.jpg" alt=""> </div>
-  <div class="grid"><img src="pic/home/sport.jpg" alt=""></div>
-  <div class="grid"><img src="pic/home/space.jpg" alt=""></div>  
-  <div class="grid"><img src="pic/home/qween.jpg" alt=""></div>
+  <div class="grid" style="color: brown;" ><img src="pic/home/bbg.jpg" alt="">  <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
+  <div class="grid" style="color: brown;"><img src="pic/home/sport.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
+  <div class="grid" style="color: brown;"><img src="pic/home/space.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>  
+  <div class="grid" style="color: brown;"><img src="pic/home/qween.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
 
 </div>
 </div>
