--- a/01-HTML-CSS/06-BEM model/amazon/service.html
+++ b/01-HTML-CSS/06-BEM model/amazon/service.html
@@ -34,9 +34,10 @@
         <div class="lowerHeader__item"><a href="Service.html">Service</a></div>
         <div class="lowerHeader__item"><a href="Registry.html">Registry</a></div>
     </div>
+    <h1>we're here to help</h1>
+
     <div class="serviceGrid">
 
-        <div class="serviceGrid__title">we're here to help</div>
         <div class="serviceGrid__option"><img src="img/_service/01_orders.png"></div>
         <div class="serviceGrid__option"><img src="img/_service/02_returns.png"></div>
         <div class="serviceGrid__option"><img src="img/_service/03_help.png"></div>
