--- a/01-HTML-CSS/06-BEM model/amazon/Deal.html
+++ b/01-HTML-CSS/06-BEM model/amazon/Deal.html
@@ -41,10 +41,10 @@
     </div>
 
     <div class="lowerHeader">
-        <div class="lowerHeader__item"><a href="/Home/">Home</a></div>
-        <div class="lowerHeader__item"><a href="/Deal/">Deal</a></div>
-        <div class="lowerHeader__item"><a href="/Service/">Service</a></div>
-        <div class="lowerHeader__item"><a href="/Registry/">Registry</a></div>
+        <div class="lowerHeader__item"><a href="home.html">Home</a></div>
+        <div class="lowerHeader__item"><a href="Deal.html">Deal</a></div>
+        <div class="lowerHeader__item"><a href="Service.html">Service</a></div>
+        <div class="lowerHeader__item"><a href="Registry.html">Registry</a></div>
     </div>
 
     <div class="dealGrid">
